# langchain-hitl

./: .env.example  Makefile  docker-compose.yml  langchain-hitl.code-workspace
.github/: copilot-instructions.md
app/: agent_factory.py  agent_request.py  agents.py  cli.py  main.py  mock_data.py  pyproject.toml  request_status.py  tools.py  validate_weather_question_guardrail.py  weather_query.py  weather_response.py
app/routes/: __init__.py  api.py
app/static/css/: style.css
app/templates/: base.html  dashboard.html
app/templates/components/: active_requests.html  hitl_approval.html  input_form.html  request_card.html  status_badge.html
app/tests/: test_health.py  test_root.py
docker/: app.Dockerfile
