[project]
name = "langchain-hitl"
version = "0.1.0"
description = "FastAPI + LangChain Human-in-the-Loop app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "langchain",
    "langchain-openai",
    "langchain-postgres",
    "psycopg[binary]",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = ["mypy>=1.19.1", "ruff>=0.15.0", "types-requests>=2.32.4.20260107"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_openai.*",
    "langchain_postgres.*",
    "langgraph.*",
]
ignore_missing_imports = true
